--- a/style.css
+++ b/style.css
@@ -6,3 +6,13 @@ article {
 .question {
     display: none;
 }
+
+.result {
+    display: none;
+}
+
+#img {
+    width: 300px;
+    height: 300px;
+    margin: 0 auto;
+}
